# ForgeEngine

./: .gitignore  Cargo.toml  ForgeDesign.md  demo_solid.json  index.html  package.json  test_checker.html
.forge/registry/: render_solid.json
game/: shooter.json
game/bundles/: collision.json  damage.json  input_to_movement.json  shooter_movement.json  shooter_render.json  spawn.json
src/: bundle.rs  contract.rs  dag.rs  dag_runner.rs  gpu.rs  harness.rs  harness.ts  main.rs  registry.rs  schema.rs
src/__tests__/: generators.test.ts  params.test.ts  schema.test.ts
src/contract/: checker.ts  helpers.ts  sandbox.ts  test_checker.ts  types.ts
src/schema/: generators.ts  params.ts  schema.ts  types.ts
src/shaders/: collision.wgsl  damage.wgsl  fill_color.wgsl  input_to_movement.wgsl  render_solid.wgsl  shooter_movement.wgsl  shooter_render.wgsl  spawn.wgsl  test_break_invariant.wgsl  test_dirty_input.wgsl  test_identity.wgsl  test_modify_dead.wgsl  test_movement.wgsl  test_movement_no_clamp.wgsl  test_write.wgsl
tests/: cli_integration.rs  dag_runner_integration.rs
tests/fixtures/: bad_wgsl_fail.json  break_invariant_fail.json  cyclic_dag_fail.json  dirty_input_fail.json  game_identity.json  game_movement.json  identity_pass.json  missing_kernel_fail.json  modify_dead_fail.json  movement_no_clamp_fail.json  movement_pass.json  render_solid_pass.json  struct_mismatch_fail.json  valid_dag.json  wrong_bindings_fail.json
